welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:17: error: Missing closing brace `}' assumed here
	}
        ^