welcome.lessons.welcome.loopfor.LoopCourseForest.scala.code
var pas=0
var qdt=0
var tour=0


		for (pas<-1 to 4) {avance()}
		gauche()
		for (pas<-1 to 2) {avance()}
		droite()
		for (pas<-1 to 4) {avance()}
		droite()
		for (pas<-1 to 2) {avance()}
		gauche()
		for (pas<-1 to 4) {avance()